# khealth-ha

./: .gitignore  hacs.json  pyproject.toml  requirements_test.txt
custom_components/khealth/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  notify.py  sensor.py  strings.json
docs/designs/: voice-integration-v0.md
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_full_flow.py  test_init.py  test_notify.py  test_resilience.py  test_sensors.py
