[project]
name = "khealth-ha"
version = "0.1.0"
description = "Home Assistant custom integration for kHealth wellness reminders"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["custom_components.khealth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 120
